--- a/snack2/index.html
+++ b/snack2/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     
+<h1 id="result"></h1>
+
     <script src="./js/fuction.js"></script>
     <script src="./js/script.js"></script>
 </body>
